@@ -24,6 +24,9 @@
    - markus@cvs.openbsd.org 2002/03/16 11:24:53
      [compress.c]
      skip inflateEnd if inflate fails; ok provos@
+   - markus@cvs.openbsd.org 2002/03/16 17:22:09
+     [auth-rh-rsa.c auth.h]
+     split auth_rhosts_rsa(), ok provos@
 
 20020317
  - (tim) [configure.ac] Assume path given with --with-pid-dir=PATH is wanted,
